--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
 
     <section id="main-slider">
         <div class="owl-carousel">
-            <div class="item" style="background-image: url(projectImages/biqu.jpg);">
+            <div class="item" style="background-image: url(projectImages/biqu3.png);">
                 <div class="slider-inner">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="carousel-content text-left">
+                                <div class="carousel-content text-left"  style="margin-top: -50px;">
                                     <h2><span>BiQu</span></h2>
-                                    <p><font color="black">A Long-Standing WPI Project on Quadrupedal Locomotion</font></p>
+                                    <p><font color="black">A Long-Standing WPI Project on Quadrupedal Locomotion.</font></p>
+                                    <p>Note: this image is a placeholder, need to be replaced with our own picture</font></p>
                                     <a class="btn btn-primary btn-lg" href="https://users.wpi.edu/~mmaghelih/BiQu.html">Read More</a>
                                 </div>
                             </div>
@@ -85,14 +86,14 @@
                     </div>
                 </div>
             </div><!--/.item-->
-            <div class="item" style="background-image: url(images/slider/bg2.jpg);">
+            <div class="item" style="background-image: url(projectImages/huron2.png);">
                 <div class="slider-inner">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="carousel-content text-right">
-                                    <h2>HURON</h2>
-                                    <p>WPI'S Custom-Built Humanoid Exploring New Horizons</p>
+                                <div class="carousel-content text-center" style="margin-top: -50px;">
+                                    <h2><span>HURON</span></h2>
+                                    <p><font color="black">WPI'S Custom-Built Humanoid Exploring New Horizons</font></p>
                                     <a class="btn btn-primary btn-lg" href="https://users.wpi.edu/~mmaghelih/HURON/HURON.html">Read More</a>
                                 </div>
                             </div>
@@ -100,14 +101,14 @@
                     </div>
                 </div>
             </div><!--/.item-->
-            <div class="item" style="background-image: url(images/slider/bg3.jpg);">
+            <div class="item" style="background-image: url(projectImages/galileo.png);">
                 <div class="slider-inner">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="carousel-content text-left">
-                                    <h2>Galileo<span></span></h2>
-                                    <p>WPI's In-House Psueodspectral Collocation Solver for Hybrid Systems</p>
+                                <div class="carousel-content text-center" style="margin-top: -50px;">
+                                    <h2><span>Galileo</span></h2>
+                                    <p><font color="black">WPI's In-House Psueodspectral Collocation Solver for Hybrid Systems</font></p>
                                     <a class="btn btn-primary btn-lg" href="https://github.com/echandler5956f/Galileo">Read More</a>
                                 </div>
                             </div>
