--- a/research.html
+++ b/research.html
@@ -112,7 +112,7 @@
 
                 </div>
                 <div class="col-sm-6 wow fadeInLeft">
-                    <img class="img-responsive" src="images/feature-2.png" alt="">
+                    <img class="img-responsive" src="projectImages/huron.png" alt="">
                 </div>
             </div>
 
@@ -126,7 +126,7 @@
 
                 </div>
                 <div class="col-sm-6 wow fadeInLeft">
-                    <img class="img-responsive" src="images/feature-2.png" alt="">
+                    <img class="img-responsive" src="projectImages/galileo.png" alt="">
                 </div>
             </div>
         </div>
