--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 </div>
                 <div class="col-sm-6 wow fadeInLeft">
-                    <img class="img-responsive" src="images/feature-2.png" alt="">
+                    <img class="img-responsive" src="projectImages/go1.jpeg" alt="">
                 </div>
             </div>
         </div>
